fix: use text-align start/end instead of direction rtl/ltr for correctly displaying match time

--- a/src/app/modules/x01-match/components/x01-match-information/x01-match-information.component.scss
+++ b/src/app/modules/x01-match/components/x01-match-information/x01-match-information.component.scss
@@ -67,11 +67,11 @@
 .row-label {
   font: var(--mat-sys-title-medium);
   font-weight: 400;
-  direction: ltr;
+  text-align: start;
 }
 
 .row-value {
   font: var(--mat-sys-title-medium);
   font-weight: 500;
-  direction: rtl;
+  text-align: end;
 }
